test/classes/deitz/test_bad_function_noparens.good
test_bad_function_noparens.chpl:1: error: functions require parentheses
test_bad_function_noparens.chpl:5: error: 'bar' undeclared (first use this function)
